--- a/template/404.html
+++ b/template/404.html
@@ -8,6 +8,7 @@
     404
     <div class="sub header">
     Maybe went something wrong...
+    Para o Chat: https://matheusschwebel.pythonanywhere.com/
     </div>
   </h1>
   <a style="font-size:1.2em" href="/">
