--- a/template/lobby.html
+++ b/template/lobby.html
@@ -7,7 +7,7 @@
   <h1 class="ui inverted header" style="text-align:center">
     Uno Game
     <div class="sub header">
-    by <a href="//github.com/Matheus-Schwebel">Matheus Schwebel</a>
+    by <a href="//github.com/Matheus-Schwebel">Matheus Henrique Schwebel</a>
     </div>
   </h1>
   <div class="panel" style="padding: 2em;">
